# lfricflux

./: README.md  setup.cfg  setup.py
configs/: lfric.cfg
lfricflux/: __init__.py  __init__.py.in  flux.py  lfricflux.py  vtk_vectors.py
notebooks/: flux.ipynb  lfric_atm_thai.ipynb  slider_elev.ipynb  uv_wind.ipynb
tests/: test_gungho.py  tests.cfg
