[tool:pytest]
testpaths =
    tests/
addopts =
    -ra
    -v


[metadata]
name = lfricflux
version = file: version.txt
author = Alexander Pletzer
author_email = alexander.pletzer@nesi.org.nz
url = https://github.com/pletzer/lfricflux
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Atmospheric Science
license = Zero-Clause BSD
license_file = LICENSE.txt
description = Postprocessing code to compute fluxes from LFRic output
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    code = https://github.com/pletzer/lfricflux
    issues = https://github.com/pletzer/lfricflux/issues
keywords =
    mimetic
    regrid
    interpolate
    sphere
    LFRic


[options]
include_package_data = True
install_requires =
    mint
    vtk >= 9.2.0
package_dir =
    mint=lfricflux
packages = find:
python_requires = >3.8
setup_requires =
    setuptools >= 40.8.0
    wheel
    vtk >= 9.2.0
tests_require =
    pytest
    jupyter-client
    trame
zip_safe = False
